--- a/style.css
+++ b/style.css
@@ -1,28 +1,166 @@
-.hidden{
-    display: none;
+.hidden {
+  display: none;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-body{
-   background-color: rgb(222, 241, 194);
+body {
+  background-color: rgb(222, 241, 194);
 }
 
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .login {
-    margin-top: 350px;
-    font-weight: bold;
-    display: grid;
+  margin-top: 350px;
+  font-weight: bold;
+  display: grid;
 }
 
-.nome{
+.labelNome {
+  font-size: 30px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
 
+.nome {
+  height: 30px;
+  width: 155px;
+  border-radius: 10px;
+}
+
+.iniciar {
+  margin-top: 20px;
+  height: 30px;
+  width: 155px;
+  border-radius: 10px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
+
+.iniciando {
+  margin-top: 350px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
+
+.bemVindo {
+  font-size: 30px;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-weight: bolder;
+}
+
+.carregando {
+  font-weight: bold;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-weight: bolder;
+  color: rgb(4, 114, 4);
+}
+
+.jogo {
+  margin-top: 200px;
+  font-weight: bold;
+}
+.questoes {
+  display: grid;
+  height: 150px;
+}
+
+.inputs {
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.questao {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  margin-bottom: 200px;
+  padding-top: 30px;
+}
+#altA,
+#altB,
+#altC,
+#altD {
+  margin-right: 20px;
+}
+#respA,
+#respB,
+#respC,
+#respD,
+#altA,
+#altB,
+#altC,
+#altD {
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 100px;
+  font-size: 20px;
+}
+#respA,
+#respB,
+#respC {
+  margin-right: 60px;
+}
+.botao {
+  margin-top: 150px;
+  display: flex;
+  justify-content: center;
+}
+
+.submit {
+  margin-top: 70px;
+  width: 200px;
+  height: 30px;
+  border-radius: 10px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
+
+.botaoFim {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.fim {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.recomecar {
+  margin-top: 150px;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
+
+h2 {
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  height: 100px;
+}
+
+span {
+  color: rgb(53, 86, 4);
+}
