--- a/style.css
+++ b/style.css
@@ -136,7 +136,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  justify-content: center;
 }
+
 .fim {
   display: flex;
   align-items: center;
