--- a/style.css
+++ b/style.css
@@ -8,18 +8,26 @@
   font-family: sans-serif;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-color: rgb(222, 241, 194);
+  width: 100%;
+  height: 100%;
 }
 
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .login {
-  margin-top: 350px;
   font-weight: bold;
   display: grid;
 }
@@ -39,15 +47,15 @@ body {
 .iniciar {
   margin-top: 20px;
   height: 30px;
-  width: 155px;
+  width: 150px;
   border-radius: 10px;
   background-color: black;
   color: white;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .iniciando {
-  margin-top: 350px;
   display: grid;
   justify-content: center;
   align-items: center;
@@ -70,16 +78,13 @@ body {
 }
 
 .jogo {
-  margin-top: 200px;
   font-weight: bold;
 }
 .questoes {
   display: grid;
-  height: 150px;
 }
 
 .inputs {
-  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -89,7 +94,7 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 40px;
-  margin-bottom: 200px;
+  margin-bottom: 150px;
   padding-top: 30px;
 }
 #altA,
@@ -117,19 +122,19 @@ body {
   margin-right: 60px;
 }
 .botao {
-  margin-top: 150px;
+  margin-top: 30px;
   display: flex;
   justify-content: center;
 }
 
 .submit {
-  margin-top: 70px;
-  width: 200px;
+  width: 150px;
   height: 30px;
-  border-radius: 10px;
+  border-radius: 15px;
   background-color: black;
   color: white;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .botaoFim {
@@ -145,13 +150,13 @@ body {
   justify-content: center;
 }
 .recomecar {
-  margin-top: 150px;
-  width: 200px;
+  width: 150px;
   height: 40px;
   border-radius: 10px;
   background-color: black;
   color: white;
   font-weight: bold;
+  cursor: pointer;
 }
 
 h2 {
@@ -165,4 +170,104 @@ h2 {
 
 span {
   color: rgb(53, 86, 4);
+}
+
+@media screen and (max-width:400px){
+
+  .questoes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  h1{
+    margin-top: 200px;
+    width: 300px;
+    margin-bottom: none;
+  }
+.inputs{
+  padding: none;
+  margin-top: none;
+  display: grid;
+  text-align: justify;
+}
+
+
+.botao{
+  margin-bottom: 20px;
+}
+
+#respA,
+#respB,
+#respC,
+#respD,
+#altA,
+#altB,
+#altC,
+#altD {
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+
+  margin-bottom: 50px;
+  font-size: 20px;
+}
+
+.fim{
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+}
+
+
+@media screen and (max-width:600px){
+
+  .questoes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  h1{
+    margin-top: 200px;
+    width: 300px;
+    margin-bottom: none;
+  }
+.inputs{
+  padding: none;
+  margin-top: none;
+  display: grid;
+  text-align:start;
+}
+ 
+.botao{
+  margin-bottom: 20px;
+}
+
+#respA,
+#respB,
+#respC,
+#respD,
+#altA,
+#altB,
+#altC,
+#altD {
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 20px;
+}
+
+.fim{
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 }
